@@ -21,7 +21,7 @@ $EM_CONF[$_EXTKEY] = array(
     'author_company' => 'jambage.com',
     'CGLcompliance' => '',
     'CGLcompliance_note' => '',
-    'version' => '0.6.2',
+    'version' => '0.6.3',
     'constraints' => array(
         'depends' => array(
             'php' => '5.5.0-7.99.99',
